@@ -200,7 +200,14 @@ codenarc.extraIncludeDirs = ['jummp-plugins/*/src/groovy',
                              'jummp-plugins/*/test/unit',
                              'jummp-plugins/*/test/integration']
 
-grails.tomcat.jvmArgs = ["-Xmx4G", "-XX:MaxPermSize=512M", "-XX:-UseGCOverheadLimit", "-server", "-XX:+UseParallelGC", "-XX:ParallelGCThreads=8"]
+grails.tomcat.jvmArgs = ["-Xmx4G",
+                        "-Xss512M",
+                        "-XX:MaxPermSize=256M",
+                        "-server",
+                        "-noverify",
+                        "-XX:+UseConcMarkSweepGC",
+                        "-XX:+UseParNewGC"
+]
 
 //ensure that AST.jar is put in the right place. See scripts/AST.groovy
 System.setProperty("jummp.basePath", new File("./").getAbsolutePath())
